fix distorted logo at page loader

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -178,8 +178,8 @@ body.pace-done .page-loader {
     .page-loader .container img {
       display: block;
       margin: 0 auto 60px auto;
-      width: 110px;
-      height: 55px; }
+      width: 210px;
+      height: 88px; }
     .page-loader .container .p-p {
       font-size: 48px;
       font-weight: 100;
